syntax = "proto3";

package protos;

message ExecutorTaskData {
    string jobId = 1;
    int32 superstep = 2;

    enum Store {
        Cassandra = 0;
    }

    enum Algorithm {
        ShortestPath = 0;
    }

    Store store = 3;
    bytes storeParams = 4;

    Algorithm algorithm = 5;
    bytes algorithmParams = 6;

    bytes processRange = 7;
}
